<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FridgeInventoryActivity">


    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/add_inv_button" />

    <ListView
        android:id="@+id/listview1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_above="@id/send_button"
        android:layout_width="match_parent"
        android:layout_height="680dp" />

    <EditText
        android:id="@+id/message_text_edit"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listview1"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/quantity_text_edit"
        android:ems="10"
        android:hint="@string/item_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/quantity_text_edit"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listview1"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/spinner"
        android:ems="10"
        android:hint="@string/quantity_hint"
        android:inputType="numberSigned" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/send_button"
        android:layout_below="@+id/listview1" />


</RelativeLayout>